Changed fonts in Report.

--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -38,8 +38,8 @@
 %===============================================================================
 % Definitions
 %===============================================================================
-\setmainfont{Linux Libertine}
-\setsansfont{Helvetica Neue Thin}
+\setmainfont{Times New Roman}
+\setsansfont{Helvetica Neue Light}
     
 %===============================================================================
 % Meta Description
