--- a/Documentation/Report/Titlepage.tex
+++ b/Documentation/Report/Titlepage.tex
@@ -16,12 +16,12 @@
 
 % UHH-Logo
 \begin{textblock*}{85mm}(20mm, 257mm)
-	\includegraphics[width=2cm]{logo-uhh}\;{Universität Hamburg}
+	\includegraphics[width=2cm]{logo-uhh}\;{\sffamily Universität Hamburg}
 \end{textblock*}
 
 % FBI-Logo
 \begin{textblock*}{85mm}(105mm, 257mm)
-	\hfill{Fachbereich Informatik}\;\includegraphics[width=2cm]{logo-fbi}
+	\hfill{\sffamily Fachbereich Informatik}\;\includegraphics[width=2cm]{logo-fbi}
 \end{textblock*}
 
 \makeatother
