--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -26,7 +26,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \linespread{1.5}
 \geometry{a4paper}
-\geometry{left=20mm,right=20mm,bottom=30mm,top=30mm}
+\geometry{left=25mm,right=25mm,bottom=30mm,top=30mm}
 \geometry{footnotesep=10mm}
 \geometry{headsep=10mm}
 \geometry{head=10mm}
@@ -38,7 +38,7 @@
 %===============================================================================
 % Definitions
 %===============================================================================
-\setmainfont{Times New Roman}
+\setmainfont{Times}
 \setsansfont{Helvetica Neue Light}
     
 %===============================================================================
