--- a/Documentation/Report/Titlepage.tex
+++ b/Documentation/Report/Titlepage.tex
@@ -5,23 +5,23 @@
 	\textcolor{kiba}{\bf\sffamily\fontsize{48pt}{48pt}\selectfont \@title} \\[.5cm]
 	\includegraphics[height=3cm]{logo-kiba} \\[.5cm]
 	\textcolor{kiba}{\LARGE\sffamily Projektbericht} \\[.5cm]
-    {\large\sffamily Angefertigt von} \\[4pt]
+    {\large\sffamily von} \\[4pt]
     {\Large \@author \\[1.5cm]}
     {\large\sffamily Veranstalter} \\[12pt]
-    {\Large Dr. Guido Gryczan} \\[6pt] {\LARGE Dr. Martin Christof Kindsmüller\vphantom{y}} \\[6pt] {\LARGE Christian Zoller} \\[1.5cm]
+    {\Large Dr. Guido Gryczan} \\[6pt] {\Large Dr. Martin Christof Kindsmüller\vphantom{y}} \\[6pt] {\Large Christian Zoller} \\[1.5cm]
     {\Large\sffamily \@date}
 \end{center}
 
 \vspace{2.5cm}
 
 % UHH-Logo
-\begin{textblock*}{85mm}(20mm, 257mm)
-	\includegraphics[width=2cm]{logo-uhh}\;{\sffamily Universität Hamburg}
+\begin{textblock*}{80mm}(25mm, 257mm)
+	\noindent\includegraphics[width=2cm]{logo-uhh}\;\parbox[b][2cm][c]{60mm}{\sffamily \quad Universität Hamburg}
 \end{textblock*}
 
 % FBI-Logo
-\begin{textblock*}{85mm}(105mm, 257mm)
-	\hfill{\sffamily Fachbereich Informatik}\;\includegraphics[width=2cm]{logo-fbi}
+\begin{textblock*}{80mm}(105mm, 257mm)
+	\noindent\hfill\parbox[b][2cm][c]{60mm}{\sffamily\hfill Fachbereich Informatik\quad~}\includegraphics[width=2cm]{logo-fbi}
 \end{textblock*}
 
 \makeatother
