--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -5,6 +5,7 @@
 %===============================================================================
 \usepackage{fontspec}
 \usepackage{geometry}
+
 \usepackage[ngerman]{babel} % Use new german language definition
 \usepackage{amsmath, amsfonts, amssymb} % Math packages
 \usepackage{graphicx} % For Graphics
@@ -100,13 +101,14 @@ Insgesamt entstand also die Vorstellung einer Anwendung, die klassische Bankgesc
 	Eng zusammenhängend mit dem Finanzierungsprofil steht die Aktivierung ("`Authentifikation"') der App in einer Filiale. Ohne eine solche Aktivierung steht dem Benutzer nur passive Funktionalität zur Verfügung, also etwa der Filialfinder und die Umsatzanzeige. Um die App voll nutzen zu können, muss der Benutzer in eine KiBa-Filiale und von einem Berater einen Sicherheitscode eingeben lassen. Ähnlich einer Kreditkarte soll dann bei Gerätverlust auch die App selbst jederzeit gesperrt werden können. Insbesondere dient die Aktivierung aber auch dazu, den Kunden in einem Beratungsgespräch besser kennenzulernen und in einer bankseitigen Datenbank einen persönlichen Ansprechpartner festzuhalten. Aus der App kann dann direkt ein Termin mit dem eingetragenen Berater vereinbart werden. Auch ein Nachrichten-System ist denkbar, um einzelne Fragen direkt zu klären.
     
     
-    \subsection{Mockups}
+    \section{Mockups}
     
+    \section{Design}
     
     \section{Projektplan}
 
     \section{Umsetzung}
-    \subsection{Setup}
+    \subsection{Toolchain}
     
     \subsection{Scrum}
     Im Rahmen des Projekts wurden wir mit der Srum-Methodik vertraut gemacht und hatten Gelegenheit,eine einführende Zertifizierung zu absolvieren. Während der erste Hälfte des Semesters standen Vision, Konzeption und Lernprozesse im Vordergrund. Mit Beginn der eigentlichen Implementierung in der zweiten Semesterhälfte bestand dann die Herausforderung darin, den Scrum-Prozess auf die zeitlichen Gegegebenheiten einer Gruppe von Studenten mit unterschiedlichen Stundenplänen abzustimmen. Zunächst einmal war es, abgesehen von Ausnahmen, kaum möglich, sich außerhalb der festen Projekttermine in voller Gruppenstärke zu einem festen Termin zu treffen. 
