--- a/Documentation/Report/Parts/Vorgehen.tex
+++ b/Documentation/Report/Parts/Vorgehen.tex
@@ -1,4 +1,4 @@
-\section{Vorgehen}
+\authoredSection{alex}{Vorgehen}
 \subsection{Scrum}
 	Im Rahmen des Projekts wurden wir mit der Srum-Methodik vertraut gemacht und hatten Gelegenheit,eine einführende Zertifizierung zu absolvieren. Während der erste Hälfte des Semesters standen Vision, Konzeption und Lernprozesse im Vordergrund. Mit Beginn der eigentlichen Implementierung in der zweiten Semesterhälfte bestand dann die Herausforderung darin, den Scrum-Prozess auf die zeitlichen Gegegebenheiten einer Gruppe von Studenten mit unterschiedlichen Stundenplänen abzustimmen. Zunächst einmal war es, abgesehen von Ausnahmen, kaum möglich, sich außerhalb der festen Projekttermine in voller Gruppenstärke zu einem festen Termin zu treffen. 
     
