--- a/Documentation/Report/Parts/Vision.tex
+++ b/Documentation/Report/Parts/Vision.tex
@@ -1,4 +1,4 @@
-\section{Aufgabenstellung und Vision}
+\authoredSection{michael}{Aufgabenstellung und Vision}
 	Die unser Gruppe übertragene Aufgabe bestand darin, eine iOS-App zu entwickeln, die die Bindung zwischen einer fiktiven Filialbank und ihren Kunden erhöht. In den ersten Ü\-ber\-le\-gung\-en wurde schnell deutlich, dass nahezu jede Dienstleistung einer Filiale auf die ein oder andere Weise von Direktbanken abgebildet werden kann. Das Alleinstellungsmerkmal besteht im direkten menschlichen Kontakt vor Ort und in der persönliche Bindung zu einem möglicherweise vertrauten Berater. 
     
 Insofern haben wir uns nach einem Prozess von abwechselnden Gruppendiskussion und externen Feedback dazu entschlossen, diejenigen Features zu betonen, die Berater und Kunden möglichst in der Filiale zusammenbringen, aber auch unabhängig davon genutzt werden können. Auch Direktbanken versuchen inzwischen, anonyme Hotlines zu vermeiden und Kunden einzelnen Beratern zuzuordnen. In Kombination mit niedrigeren Gebühren, kostenlosen Kreditkarten und einfacher Kontoführung ist dies ein schwer zu schlagendes Angebot. Eine App, die Neukunden für eine Filalbank gewinnen soll, muss also einerseits eine ähnlich einfache Kontoverwaltung bieten, außerdem aber noch einen Mehrwert schaffen, der die höheren Gebühren einer Filialbank rechtfertigt.
