--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -77,6 +77,7 @@
 \setmainfont{Times}
 \setsansfont[
 	Extension = .ttf,
+	Path = Fonts/,
 	BoldFont = TheSansUHHBold,
 	BoldItalicFont = TheSansUHHBolditalic,
 	ItalicFont = TheSansUHHRegularItalic
