Bericht Fortsetzung Toolchain/QS

--- a/Documentation/Report/Parts/Qualitätssicherung.tex
+++ b/Documentation/Report/Parts/Qualitätssicherung.tex
@@ -1,1 +1,9 @@
 \authoredSection{corny}{Qualitätssicherung}
+\begin{itemize}
+	\item Gestaltungs-/Entwicklungsprozess (Mock-ups $\to$ Design $\to$ GUI-Bau $\to$ Logik)
+	\item Design und iOS7-Guidelines
+	\item Weeklies
+	\item Feature-Improvement nach Plenarveranstaltungen
+	\item Ausblick auf Unit Tests
+	\item Club Mate
+\end{itemize}
