--- a/Documentation/Report/Parts/Toolchain.tex
+++ b/Documentation/Report/Parts/Toolchain.tex
@@ -1,1 +1,11 @@
 \authoredSection{corny}{Toolchain}
+Im Rahmen unseres Projekts wurde uns schnell klar, dass wir auf viele Tools angewiesen sein würden. So musste unser Quelltext versioniert, die grobe Struktur und Views festgehalten und Aufgabenpakete erstellt und koordiniert werden. Darüber hinaus war uns auch Design und Qualität wichtig. Auf unsere Erfahrungen in diesem Zusammenhang gehen wir im folgenden Abschnitt ein.
+
+\subsection{Agiles Vorgehen im Projekt}
+PivotalTracker + Scrum
+\subsection{Quelltextversionierung}
+GitHub + Git
+\subsection{Konzept und erster Entwurf}
+Balsamiq
+\subsection{Design- und Textsatztools}
+Lua\LaTeX{}, Adobe Illustrator/Photoshop
