Bericht: Abbildungen mit Verzeichnis.

--- a/Documentation/Report/Parts/Konzept.tex
+++ b/Documentation/Report/Parts/Konzept.tex
@@ -1,4 +1,13 @@
 \authoredSection{julius}{Konzept}
+\begin{figure}
+	\centering
+	\begin{tabular}{@{}c@{\hspace{.5cm}}c@{}}
+		\includegraphics[page=1, height=110mm]{Pictures/Questionnaire} &
+		\includegraphics[page=2, height=110mm]{Pictures/Questionnaire}
+	\end{tabular}
+	\label{fig:Questionnaire}
+	\caption{Umfragebogen für erste Ist-Analyse}
+\end{figure}
 \subsection{Name}
     Der Name der App, "`\textbf{K}i\textbf{B}a"', steht in Anlehnung an eine bekannte Direktbank für eine kundeninteressierte Bank, die mit der Anwendung mehr über ihre Kunden erfahren möchte und mit ihnen in Austausch treten will, um spezifischere Angebote und Beratungen anbieten zu können.
     
