Bericht: Stylische Titelseite.

--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -19,6 +19,7 @@
 \usepackage{titletoc} % Customizable ToC
 \usepackage{tocloft} % Customizable ToC, LoF, …
 \usepackage{pdfpages} % Embedding pdfs
+\usepackage{wallpaper} % Background images
 
 %===============================================================================
 % Definitions
@@ -115,11 +116,11 @@
 % Meta Description
 %===============================================================================    
 \author{%
-	Alexander Droste\vphantom{yMö}\\[-12pt]
-    Markus Fasselt\vphantom{yöM}\\[-12pt]
-    Marco F. Jendryczko\vphantom{yMö}\\[-12pt]
-    Konstantin S. M. Möllers \vphantom{yMö}\\[-12pt]
-    Michael Schaarschmidt\vphantom{yöM}\\[-12pt]
+	Alexander Droste\vphantom{yMö}\\[-2pt]
+    Markus Fasselt\vphantom{yöM}\\[-2pt]
+    Marco F. Jendryczko\vphantom{yMö}\\[-2pt]
+    Konstantin S. M. Möllers \vphantom{yMö}\\[-2pt]
+    Michael Schaarschmidt\vphantom{yöM}\\[-2pt]
     Julius Wulk\vphantom{yMö}}
 \title{Die „KiBa“-App}
 \date{Wintersemester 2013/14}
