--- a/Documentation/Report/Titlepage.tex
+++ b/Documentation/Report/Titlepage.tex
@@ -1,27 +1,13 @@
 \makeatletter
 \thispagestyle{empty}
+\ThisULCornerWallPaper{1}{Pictures/Background}
 
-\begin{center}
-	\textcolor{kiba}{\bf\sffamily\fontsize{48pt}{48pt}\selectfont \@title} \\[.5cm]
-	\includegraphics[height=3cm]{logo-kiba} \\[.5cm]
-	\textcolor{kiba}{\LARGE\sffamily Projektbericht} \\[.5cm]
+\vspace*{7.5cm}%
+\noindent\textcolor{white}{\bfseries\sffamily\fontsize{48pt}{48pt}\selectfont\@title} \\[1mm]
+\textcolor{white}{\LARGE\sffamily Projektbericht} \\[.5cm]
     {\large\sffamily von} \\[4pt]
-    {\Large \@author \\[1.5cm]}
-    {\large\sffamily Veranstalter} \\[12pt]
-    {\Large Dr. Guido Gryczan} \\[6pt] {\Large Dr. Martin Christof Kindsmüller\vphantom{y}} \\[6pt] {\Large Christian Zoller} \\[1.5cm]
-    {\Large\sffamily \@date}
-\end{center}
-
-\vspace{2.5cm}
-
-% UHH-Logo
-\begin{textblock*}{80mm}(25mm, 257mm)
-	\noindent\includegraphics[width=2cm]{logo-uhh}\;\parbox[b][2cm][c]{60mm}{\sffamily \quad Universität Hamburg}
-\end{textblock*}
-
-% FBI-Logo
-\begin{textblock*}{80mm}(105mm, 257mm)
-	\noindent\hfill\parbox[b][2cm][c]{60mm}{\sffamily\hfill Fachbereich Informatik\quad~}\includegraphics[width=2cm]{logo-fbi}
-\end{textblock*}
+    {\Large\sffamily \@author \\[1cm]}
+    {\sffamily Veranstalter} \\[4pt]
+    {\large\sffamily Dr. Guido Gryczan, Dr. Martin Christof Kindsmüller und Christian Zoller}
 
 \makeatother
