--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -147,7 +147,7 @@
 \input{Parts/Ergebnis}
 \input{Parts/Architektur}
 \input{Parts/Toolchain}
-\input{Parts/Qualitätssicherung}
+\input{Parts/Qualitaetssicherung}
 \input{Parts/Fazit}
 \newpage
 
