Bericht: Struktur angepasst (Michaels Part)

--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -141,6 +141,7 @@
 % Parts
 %===============================================================================
 \input{Parts/Vision}
+\input{Parts/Kontext}
 \input{Parts/Konzept}
 \input{Parts/Vorgehen}
 \input{Parts/Design}
