Bericht: ER-Diagramm/Datenmodell.

--- a/Documentation/Report/Parts/Architektur.tex
+++ b/Documentation/Report/Parts/Architektur.tex
@@ -6,8 +6,10 @@
 \subsection{Umsetzung des MVC-Ansatzes}
 	Die Architektur muss uns dabei auf die Entwicklung der Kernfeatures fokussieren. Wenn nicht klar ist, welche Teile der Logik, der GUI oder anderer 
 
-\subsection{Datenmodell}
+\subsection{Datenmodell}	
+	Zur Modellbildung der App fiel unsere Entscheidung auf ein klassisches Entitäten-Be\-zieh\-ungs\-sys\-tem. Unser Weg zur Abstraktion einer Bank führt daher über Klassen, die Modelle zu Objekten der realen Welt darstellen. Wie wir dabei vorgegangen sind ist im Entitäten-Relationen-Diagramm unseres Datenmodells in Abbildung \ref{fig:ERDiagram} zu sehen.
 	
+	\input{Pictures/ERDiagram}
 
 \subsection{Datenübertragung}
 \begin{itemize}
