--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -20,6 +20,24 @@
 \usepackage{tocloft} % Customizable ToC, LoF, …
 \usepackage{pdfpages} % Embedding pdfs
 \usepackage{wallpaper} % Background images
+\usepackage{tikz-er2} % Entity relation diagrams
+
+%===============================================================================
+% Tikz-Librarys
+%===============================================================================
+\usetikzlibrary{positioning}
+\usetikzlibrary{shadows}
+
+\tikzstyle{every entity} = [top color=white, bottom color=blue!30, 
+                            draw=blue!50!black!100, drop shadow]
+\tikzstyle{every weak entity} = [drop shadow={shadow xshift=.7ex, 
+                                 shadow yshift=-.7ex}]
+\tikzstyle{every attribute} = [top color=white, bottom color=yellow!20, 
+                               draw=yellow, node distance=1cm, drop shadow]
+\tikzstyle{every relationship} = [top color=white, bottom color=red!20, 
+                                  draw=red!50!black!100, drop shadow]
+\tikzstyle{every isa} = [top color=white, bottom color=green!20, 
+                         draw=green!50!black!100, drop shadow]
 
 %===============================================================================
 % Definitions
