--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -28,14 +28,15 @@
 \usetikzlibrary{positioning}
 \usetikzlibrary{shadows}
 
-\tikzstyle{every entity} = [top color=white, bottom color=blue!30, 
-                            draw=blue!50!black!100, drop shadow]
+\tikzstyle{every node} = [font=\sffamily]
+\tikzstyle{every entity} = [top color=kiba!10, bottom color=kiba!70, 
+                            draw=kiba!80!black, drop shadow, font=\sffamily\bfseries]
 \tikzstyle{every weak entity} = [drop shadow={shadow xshift=.7ex, 
                                  shadow yshift=-.7ex}]
-\tikzstyle{every attribute} = [top color=white, bottom color=yellow!20, 
-                               draw=yellow, node distance=1cm, drop shadow]
+\tikzstyle{every attribute} = [top color=white, bottom color=black!10, 
+                               draw=black!50, node distance=1cm, drop shadow]
 \tikzstyle{every relationship} = [top color=white, bottom color=red!20, 
-                                  draw=red!50!black!100, drop shadow]
+                                  draw=red!50!black!100, drop shadow, font=\sffamily\itshape]
 \tikzstyle{every isa} = [top color=white, bottom color=green!20, 
                          draw=green!50!black!100, drop shadow]
 
