--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -21,6 +21,7 @@
 \usepackage{pdfpages} % Embedding pdfs
 \usepackage{wallpaper} % Background images
 \usepackage{tikz-er2} % Entity relation diagrams
+\usepackage{listings} % Code listings
 
 %===============================================================================
 % Tikz-Librarys
@@ -39,6 +40,28 @@
                                   draw=red!50!black!100, drop shadow, font=\sffamily\itshape]
 \tikzstyle{every isa} = [top color=white, bottom color=green!20, 
                          draw=green!50!black!100, drop shadow]
+                         
+%===============================================================================
+% Listings
+%===============================================================================
+\lstset{
+	emph={KBABranchDao, KBAAccountDao, KBACustomerDao, KBATransactionDao, KBAExchangeRateDao, KBACustomerDao, KBACreditRatingDao, KBAMessageDao, KBAAuth, KBADependencyInjector},
+	emph={[2]NSString},
+	language=[Objective]C, 
+	morekeywords={new,@,},
+	backgroundcolor=\color{black!3},
+	columns=fullflexible,
+	basicstyle=\ttfamily\footnotesize,
+	keywordstyle=\bfseries\ttfamily\color{blue!50!red!80!black},
+	stringstyle=\color{red!70!black}\ttfamily,
+	identifierstyle=\ttfamily\itshape,
+	commentstyle=\color{green!30!black}\ttfamily\itshape,
+	emphstyle={\color{orange!70!black}\bfseries\texttt},
+	emphstyle={[2]\color{green!60!blue!50!black}\bfseries\texttt},
+	showstringspaces=false,
+	flexiblecolumns=false,
+	tabsize=4,
+}
 
 %===============================================================================
 % Definitions
@@ -58,6 +81,8 @@
 \geometry{head=10mm}
 \geometry{bindingoffset=0mm}
 \definecolor{kiba}{HTML}{41707C}
+\newcommand{\pre}[1]{%
+	\texttt{#1}}
 
 %===============================================================================
 % Collaborative
@@ -81,6 +106,7 @@
 	\renewcommand{\currentAuthor}{#1}%
 	\section[#2]{#2 {\normalfont\sffamily\small von \csname name@#1\endcsname}}}
 \makeatother
+\renewcommand{\lstlistingname}{Programmausdruck}
 
 %===============================================================================
 % Head / Foot
@@ -105,6 +131,13 @@
 	BoldItalicFont = TheSansUHHBolditalic,
 	ItalicFont = TheSansUHHRegularItalic
 ]{TheSansUHHRegular}
+\setmonofont[
+	Extension = .otf,
+	Path = Fonts/,
+	BoldFont = lmmonolt10-bold,
+	BoldItalicFont = lmmonolt10-boldoblique,
+	ItalicFont = lmmonolt10-oblique
+]{lmmono12-regular}
 
 %===============================================================================
 % Sections
